--- a/shell/notes/1.md
+++ b/shell/notes/1.md
@@ -66,3 +66,70 @@ now is the time  有cat返回
 
 你可能想要知道，是谁替执行中的程序初始化标准输入、输出及错误输出的呢？答案就是在你登录时，UNIX便将默认的标准输入、输出及错误输出安排成你的终端。I/O重定向就是你通过与终端交互，或是在shell脚本里设置，重新安排从哪里输入或输出到哪里。
 
+#### 1.4 重定向与管道
+
+shell提供了数种语法，用来改变默认IO的来源端与目的端，如下：
+
+①以 < 改变标准输入
+
+program < file  可将program的标准输入修改为file
+
+```
+tr -d '\n' < test.txt    #删除test.txt 文件中每行后面的回车
+```
+
+②以  > 改变标准输出
+
+program > file 可将program的标准输出修改为file
+
+```
+tr -d '\n' < test.txt > test2.txt #将上面处理后的文本内容输出到test2.txt中
+```
+
+注意: >重定向符在目的文件不存在时，会创建一个。若目的文件已存在，将会被覆盖。
+
+③以 >> 附加到文件
+
+program >> file 可将program的标准输出附加到file的尾部(不会覆盖掉文件)
+
+④以 | 建立管道
+
+program1 | program2可将program1的标准输出修改为program2的标准输入
+
+#### 1.5 特殊文件
+
+UNIX系统提供了两个对shell编程特别有用的特殊文件：/dev/null和/dev/tty
+
+①/dev/null
+
+就是大家所熟知的位桶。传送到此文件的数据都会被系统丢掉。也就是说，当程序将数据写到此文件时，会认为它已经完成了写入数据的操作，但实际什么都没做。
+
+②/dev/tty
+
+当程序打开此文件时，UNIX会自动将它重定向到一个终端
+
+#### 1.6访问shell脚本的参数
+
+所谓的位置参数指的就是shell脚本的命令行参数。在shell函数里，它们同时也可以是函数的参数。各参数都由整数来命名。基于历史原因，当它超过9，就要用大括号把数字框起来
+
+```
+echo first arg is $1
+echo tenth arg is ${10}
+```
+
+eg: vim finduser.sh 内容如下
+
+```
+#! /bin/bash
+who | grep $1
+```
+
+执行: ./finduser.sh zhangsan
+
+#### 1.7 简单的执行跟踪
+
+程序难免会出错，想知道你的程序正在做什么，有个好方法就是把执行跟踪的功能打开。这会使得shell显示每个被执行到的命令，并在前面加上"+"。
+
+打开的方式：sh -x ./finduser.sh
+
+或者可以在脚本里使用 set -x打开执行跟踪，用 set +x关闭
